# transcriber

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_web.py  vercel.json
api/: index.py
app/: deployment_config.py  main.py
app/routers/: __init__.py  transcription.py
app/templates/: index.html
prompts/: format.txt  summarize.txt  transcribe.txt
tests/: test_transcriber.py
transcriber/: __init__.py  audio.py  config.py  gemini.py  main.py
