[project]
name = "transcriber"
version = "0.1.0"
description = "音声ファイルやYouTube動画から音声を書き起こすCLIツール"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Web framework dependencies
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "websockets==15.0.1",
    
    # Existing transcriber dependencies
    "google-generativeai==0.8.3",
    "yt-dlp>=2024.12.13",
    "pydub==0.25.1",
    "click==8.1.7",
    "python-dotenv==1.0.1",
    
    # Audio processing
    "ffmpeg-python==0.2.0",
    "audioop-lts; python_version >= '3.13'",  # Required for pydub on Python 3.13+
    
    # CLI enhancement
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",  # For testing FastAPI
]

[project.scripts]
transcriber = "transcriber.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
